--- a/deploy/kind-cluster.yaml
+++ b/deploy/kind-cluster.yaml
@@ -1,36 +1,10 @@
-# Kind cluster configuration for local OpenShift/Kubernetes demo
-# Reference: https://kind.sigs.k8s.io/docs/user/configuration/
-kind: Cluster
-apiVersion: kind.x-k8s.io/v1alpha4
-name: demo-503-cluster
-
-# Multi-node cluster setup (1 control-plane + 2 workers)
-nodes:
-- role: control-plane
-  kubeadmConfigPatches:
-  - |
-    kind: InitConfiguration
-    nodeRegistration:
-      kubeletExtraArgs:
-        node-labels: "ingress-ready=true"
-  extraPortMappings:
-  # Map host ports to cluster for local access
-  - containerPort: 80
-    hostPort: 8080
-    protocol: TCP
-  - containerPort: 443
-    hostPort: 8443
-    protocol: TCP
-
-- role: worker
-  labels:
-    tier: user
-
-- role: worker
-  labels:
-    tier: admin
-
-# Enable feature gates for testing
-featureGates:
-  # Add any experimental features here if needed
-  # Example: "SomeFeature: true"
+## Deprecated
+# This repository is now OpenShift-only.
+# Use the manifests in the 'openshift/' directory with the OpenShift CLI (oc).
+# Example:
+#   oc apply -f openshift/namespace.yaml
+#   oc apply -f openshift/configmap.yaml
+#   oc apply -f openshift/deployment.yaml
+#   oc apply -f openshift/service.yaml
+#   oc apply -f openshift/route.yaml
+#   oc apply -f openshift/hpa.yaml
