--- a/openshift/configmap.yaml
+++ b/openshift/configmap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: app-config
-  namespace: demo-503
+  namespace: sample-app
 data:
   MAINTENANCE_MODE: "false"
