--- a/openshift/namespace.yaml
+++ b/openshift/namespace.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: demo-503
+  name: sample-app
   labels:
-    name: demo-503
+    name: sample-app
