--- a/openshift/service.yaml
+++ b/openshift/service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: demo-app-user
-  namespace: demo-503
+  name: sample-app-user
+  namespace: sample-app
   labels:
-    app: demo-app
+    app: sample-app
     tier: user
 spec:
   selector:
-    app: demo-app
+    app: sample-app
     tier: user
   ports:
   - port: 8080
@@ -20,14 +20,14 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: demo-app-admin
-  namespace: demo-503
+  name: sample-app-admin
+  namespace: sample-app
   labels:
-    app: demo-app
+    app: sample-app
     tier: admin
 spec:
   selector:
-    app: demo-app
+    app: sample-app
     tier: admin
   ports:
   - port: 8080
