refactor: migrate from OpenShift to Kubernetes (Minikube) with admin-always-accessible architecture
- Replace OpenShift manifests with Kubernetes manifests
- Document critical admin-always-ready pattern
- Update README.md with Minikube setup and architecture details
- Rewrite MAINTENANCE_DEMO.md for Kubernetes demo flow
- Update CONTRIBUTING.md with Minikube testing procedures
- Remove obsolete files (docker-compose, java-tomcat-demo, openshift/)
- Create new runme.ps1 script with setup/enable/disable/status/clean commands
- Fix all markdown linting errors

Key Innovation: Separate user and admin deployments with different readiness
probe behaviors ensure admins can always access the control panel to disable
maintenance mode, preventing operational lockout.

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
       - name: app
         image: sample-app:latest
-        imagePullPolicy: Always
+        imagePullPolicy: Never  # Use local image
         ports:
         - containerPort: 8080
           protocol: TCP
@@ -38,27 +38,17 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "500m"
-        
-        # Liveness Probe - "Is the container alive?"
-        # Common names: /health, /healthz, /livez, /alive
-        # If fails: Container is RESTARTED by Kubernetes
-        # Should only fail for: deadlocks, crashes, unrecoverable errors
         livenessProbe:
           httpGet:
-            path: /health   # or /healthz (Kubernetes convention)
+            path: /health
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 10
           timeoutSeconds: 3
           failureThreshold: 3
-        
-        # Readiness Probe - "Can the container serve traffic?"
-        # Common names: /ready, /readyz, /healthz/ready
-        # If fails: Pod REMOVED from Service endpoints (no restart)
-        # Should fail for: maintenance mode, dependencies unavailable, warming up
         readinessProbe:
           httpGet:
-            path: /ready    # or /readyz (Kubernetes convention)
+            path: /ready
             port: 8080
           initialDelaySeconds: 5
           periodSeconds: 5
@@ -88,13 +78,13 @@ spec:
       containers:
       - name: app
         image: sample-app:latest
-        imagePullPolicy: Always
+        imagePullPolicy: Never  # Use local image
         ports:
         - containerPort: 8080
           protocol: TCP
         env:
         - name: MAINTENANCE_MODE
-          value: "false"  # Admin always has access
+          value: "false"
         - name: X-Admin-Access
           value: "true"
         resources:
@@ -104,24 +94,17 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "500m"
-        
-        # Liveness Probe - "Is the container alive?"
-        # If fails: Container is RESTARTED
         livenessProbe:
           httpGet:
-            path: /health   # or /healthz
+            path: /health
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 10
           timeoutSeconds: 3
           failureThreshold: 3
-        
-        # Readiness Probe - "Can the container serve traffic?"
-        # If fails: Pod REMOVED from Service (no restart)
-        # Admin pods remain ready even during maintenance
         readinessProbe:
           httpGet:
-            path: /ready    # or /readyz
+            path: /ready
             port: 8080
           initialDelaySeconds: 5
           periodSeconds: 5
