feat: production-ready Kubernetes maintenance mode with Flask best practices
Complete implementation of maintenance mode demo using Flask @app.before_request decorator:

FEATURES:
- Flask best practice pattern: @app.before_request intercepts all requests
- Dual deployment architecture: separate user/admin pods with different readiness
- Admin always accessible: admin pods stay ready during maintenance
- Graceful degradation: user pods removed from load balancer (no restarts)
- Proper HTTP semantics: 503 with Retry-After and Cache-Control headers
- Modern UI: clean maintenance page with Kubernetes status indicators

FIXES:
- Added Apache 2.0 LICENSE file
- Fixed environment variable naming: ADMIN_ACCESS (was X-Admin-Access)
- Removed placeholder files and broken image references
- Added .dockerignore for optimized builds
- Updated package naming for consistency

IMPLEMENTATION:
- Uses gunicorn production server
- Complete automation with runme.ps1 script
- Full Kubernetes manifests (namespace, configmap, deployments, services, ingress)
- CI/CD ready with GitHub Actions linting
- Comprehensive documentation

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -85,7 +85,7 @@ spec:
         env:
         - name: MAINTENANCE_MODE
           value: "false"
-        - name: X-Admin-Access
+        - name: ADMIN_ACCESS
           value: "true"
         resources:
           requests:
