feat: add production-grade active user tracking and graceful drain
**Active User Session Tracking:**
- In-memory session tracking with session_id, user, login_time, last_activity, pod
- /admin/users dashboard shows real-time active sessions (auto-refresh 5s)
- Tracks sessions across before_request for all routes
- /logout endpoint for graceful or forced logout

**Server-Sent Events (SSE) for Real-Time Notifications:**
- /events endpoint streams notifications to clients
- JavaScript SSE listener on frontend
- Drain notification shows countdown banner
- Auto-logout after 60s or manual logout button

**Graceful Shutdown with 60s User Drain:**
- Send SSE notification to all active users
- Wait 60s for graceful logout with progress logging
- Force-close remaining sessions after timeout
- Track graceful vs forced logouts in metrics

**Prometheus Metrics:**
- active_sessions_total: Current active sessions
- drain_notifications_sent: Total drain warnings sent
- graceful_logouts_total: Users who logged out after notification
- forced_logouts_total: Sessions force-closed after timeout
- total_logins: Lifetime login count

**Kubernetes Configuration:**
- User pods: terminationGracePeriodSeconds=90 (60s drain + 15s propagation + buffer)
- Admin pods: terminationGracePeriodSeconds=30 (no user sessions to drain)
- Admin dashboard links to /admin/users and /metrics

**Documentation:**
- ACTIVE_USER_TRACKING.md: Complete guide on session tracking, SSE, graceful drain
- Production patterns: Redis for cross-pod sessions, sticky sessions, PDB
- Scale-down coordination workflow
- Testing locally and in Kubernetes
- FAQ and troubleshooting

This implements the production pattern for handling active users during
pod shutdown, scale-down, or maintenance windows. Users get 60-second
warning to save work and logout gracefully.

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -18,6 +18,7 @@ spec:
         app: sample-app
         tier: user
     spec:
+      terminationGracePeriodSeconds: 90  # 60s user drain + 15s endpoint propagation + 15s buffer
       containers:
       - name: app
         image: sample-app:latest
@@ -75,6 +76,7 @@ spec:
         app: sample-app
         tier: admin
     spec:
+      terminationGracePeriodSeconds: 30  # Admin pods don't need long drain (no user sessions)
       containers:
       - name: app
         image: sample-app:latest
