feat: Add Redis session storage, SSE maintenance notifications, and logout button
- Implement Redis for cross-pod session visibility
- Add maintenance mode monitor thread with SSE notifications
- Add SSE drain notifications for both maintenance mode and SIGTERM
- Add visible logout button on user page
- Update documentation with dual scenario flows
- Fix 75 linting errors (imports, whitespace, f-strings)
- Add test-endpoints.ps1 script
- All 8 tests passing

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -32,6 +32,10 @@ spec:
             configMapKeyRef:
               name: app-config
               key: MAINTENANCE_MODE
+        - name: REDIS_HOST
+          value: "redis"
+        - name: REDIS_PORT
+          value: "6379"
         resources:
           requests:
             memory: "128Mi"
@@ -89,6 +93,10 @@ spec:
           value: "false"
         - name: ADMIN_ACCESS
           value: "true"
+        - name: REDIS_HOST
+          value: "redis"
+        - name: REDIS_PORT
+          value: "6379"
         resources:
           requests:
             memory: "128Mi"
