refactor: Simplify to clean DEV/OPS separation (62.6% smaller)
- Simplified app.py from 1288 to 482 lines
- Removed: Redis, SSE, monitoring threads, session tracking
- Core pattern: @app.before_request + file-based maintenance flag
- Clean separation: DEV returns 503, OPS controls traffic routing
- Updated Kubernetes manifests to use ConfigMap volume mount
- Added ARCHITECTURE.md documenting action flow
- All type checks passing (mypy + ruff)

BREAKING: Removed Redis dependency and active user tracking
Use app_complex_backup.py if production features needed

--- a/kubernetes/configmap.yaml
+++ b/kubernetes/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: app-config
+  name: sample-app-config
   namespace: sample-app
 data:
-  MAINTENANCE_MODE: "false"
+  maintenance: "false"
