Reorganize documentation and streamline architecture
- Renamed ARCHITECTURE.md to DESIGN.md for clarity
- Deleted GUIDE.md (903 lines) - content merged into README and TROUBLESHOOTING
- Created docs/TROUBLESHOOTING.md - comprehensive troubleshooting guide
- Updated all references: GUIDE.md, ARCHITECTURE.md, MAINTENANCE_DEMO.md
- Fixed ConfigMap references: app-config → sample-app-config
- Simplified documentation structure to 7 essential markdown files
- Updated app.py text to reflect current Redis-first architecture
- Streamlined scripts: removed 10 scripts, kept 3 essential ones
- Updated service tunnel approach in all documentation
- Verified full deployment from ground up - all tests passing

--- a/kubernetes/maintenance-page-deployment.yaml
+++ b/kubernetes/maintenance-page-deployment.yaml
@@ -65,7 +65,7 @@ data:
     </head>
     <body>
         <div class="card">
-            <div class="icon">🔧</div>
+            <div class="icon">Service Under Maintenance</div>
             <h1>Service Temporarily Unavailable</h1>
             <p>We're performing scheduled maintenance to improve your experience.</p>
             <p>This page will automatically refresh in 5 minutes.</p>
